--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^7.1.3",
+    "php": ">=5.5.9",
     "illuminate/http": "^5.0",
     "illuminate/support": "^5.0"
   },
