--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     }
   ],
   "require": {
-    "php": ">=7.3",
-    "illuminate/http": "^8.0",
-    "illuminate/support": "^8.0"
+    "php": "^8.0.2",
+    "illuminate/http": "^9.0",
+    "illuminate/support": "^9.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.0"
+    "phpunit/phpunit": "^9.0"
   },
   "autoload": {
     "psr-4": {
